; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv_parse.c_push.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv_parse.c_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.jv_parser = type { i32, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.jv_parser*, i32)* @push to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @push(%struct.jv_parser* %0, i32 %1) #0 {
  %3 = alloca %struct.jv_parser*, align 8
  %4 = alloca i32, align 4
  store %struct.jv_parser* %0, %struct.jv_parser** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %6 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %9 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = icmp sle i32 %7, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %15 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %18 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = icmp eq i32 %16, %19
  br i1 %20, label %21, label %41

21:                                               ; preds = %2
  %22 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %23 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = mul nsw i32 %24, 2
  %26 = add nsw i32 %25, 10
  %27 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %28 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %27, i32 0, i32 1
  store i32 %26, i32* %28, align 4
  %29 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %30 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %29, i32 0, i32 2
  %31 = load i32*, i32** %30, align 8
  %32 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %33 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = sext i32 %34 to i64
  %36 = mul i64 %35, 4
  %37 = trunc i64 %36 to i32
  %38 = call i32* @jv_mem_realloc(i32* %31, i32 %37)
  %39 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %40 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %39, i32 0, i32 2
  store i32* %38, i32** %40, align 8
  br label %41

41:                                               ; preds = %21, %2
  %42 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %43 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %46 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %45, i32 0, i32 1
  %47 = load i32, i32* %46, align 4
  %48 = icmp slt i32 %44, %47
  %49 = zext i1 %48 to i32
  %50 = call i32 @assert(i32 %49)
  %51 = load i32, i32* %4, align 4
  %52 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %53 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %52, i32 0, i32 2
  %54 = load i32*, i32** %53, align 8
  %55 = load %struct.jv_parser*, %struct.jv_parser** %3, align 8
  %56 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 8
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %56, align 8
  %59 = sext i32 %57 to i64
  %60 = getelementptr inbounds i32, i32* %54, i64 %59
  store i32 %51, i32* %60, align 4
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @jv_mem_realloc(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
